--- a/posts/2012/08/13.md
+++ b/posts/2012/08/13.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/08/i-tried-to-begin-wireshark/"
+path: "/posts/2012/08/13"
 date: "2012-08-13"
 title: "WireShark入門してみました"
 categories: ["エンジニアリング"]
