--- a/posts/2012/08/29.md
+++ b/posts/2012/08/29.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/08/about-teaching-something-for-someone/"
+path: "/posts/2012/08/29"
 date: "2012-08-29"
 title: "人に教えるということ"
 categories: ["雑記"]
