--- a/posts/2012/09/06.md
+++ b/posts/2012/09/06.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/09/jquery/"
+path: "/posts/2012/09/06"
 date: "2012-09-06"
 title: "jQuery について教科書をもらったので勉強してみた"
 categories: ["エンジニアリング"]
