--- a/posts/2012/09/19.md
+++ b/posts/2012/09/19.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/09/i-tried-to-update-to-ios6-by-iphone4-part2/"
+path: "/posts/2012/09/19"
 date: "2012-09-19"
 title: "iPhone4でiOS6にしてみました。（その２）"
 categories: ["雑記"]
