--- a/posts/2012/09/20.md
+++ b/posts/2012/09/20.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/09/i-bought-iphone5/"
+path: "/posts/2012/09/20"
 date: "2012-09-20"
 title: "iPhone5買ったよ。"
 categories: ["雑記"]
