--- a/posts/2012/10/10.md
+++ b/posts/2012/10/10.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/10/i-could-not-access-by-hostname-on-only-chrome/"
+path: "/posts/2012/10/10"
 date: "2012-10-10"
 title: "Chromeだけホスト名でアクセスできなかった　の話"
 categories: ["トラブルシューティング"]
