--- a/posts/2013/01/04.md
+++ b/posts/2013/01/04.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/01/migrate-google-account-and-copy/"
+path: "/posts/2013/01/04"
 date: "2013-01-04"
 title: "Googleアカウントを移行する&コピーする"
 categories: ["エンジニアリング"]
