--- a/posts/2013/03/08.md
+++ b/posts/2013/03/08.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/03/note-tweak-laptop-display-on-ubuntu/"
+path: "/posts/2013/03/08"
 date: "2013-03-08"
 title: "Ubuntuだとパソコンのディスプレイが見辛かったので調整メモ"
 categories: ["トラブルシューティング"]
