--- a/posts/2013/03/09.md
+++ b/posts/2013/03/09.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/03/is-this-a-time/"
+path: "/posts/2013/03/09"
 date: "2013-03-09"
 title: "今、入門本を買うべきなの？"
 categories: ["雑記"]
