--- a/posts/2013/03/17.md
+++ b/posts/2013/03/17.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/03/brightness-tweak-on-ubuntu-12-10-on-laptop/"
+path: "/posts/2013/03/17"
 date: "2013-03-17"
 title: "Ubuntu12.10　ノートPCで画面の明るさ調整"
 categories: ["トラブルシューティング"]
