--- a/posts/2013/03/21.md
+++ b/posts/2013/03/21.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/03/tutorial-freebsd-for-linux-users/"
+path: "/posts/2013/03/21"
 date: "2013-03-21"
 title: "LinuxユーザーのFreeBSD入門メモ"
 categories: ["雑記"]
