--- a/posts/2013/04/09.md
+++ b/posts/2013/04/09.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/04/i-could-not-deploing-a-target-server-01-on-my-macos/"
+path: "/posts/2013/04/09"
 date: "2013-04-09"
 title: "HackerJapan 2013年５月号のやられサーバー01がMacで起動できなかった話"
 categories: ["雑記"]
