--- a/posts/2013/04/16.md
+++ b/posts/2013/04/16.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/04/my-junior-joined-to-my-lab/"
+path: "/posts/2013/04/16"
 date: "2013-04-16"
 title: "後輩が入ってきた"
 categories: ["雑記"]
