--- a/posts/2013/04/28.md
+++ b/posts/2013/04/28.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/04/hanging-out-akihabara/"
+path: "/posts/2013/04/28"
 date: "2013-04-28"
 title: "秋葉原ぶらり"
 categories: ["雑記"]
