--- a/posts/2013/04/29.md
+++ b/posts/2013/04/29.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/04/lpic-level2-201/"
+path: "/posts/2013/04/29"
 date: "2013-04-29"
 title: "LPIC Level2 (201)"
 categories: ["雑記"]
