--- a/posts/2013/10/29.md
+++ b/posts/2013/10/29.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/10/quick-review-using-macos-marvericks-a-week/"
+path: "/posts/2013/10/29"
 date: "2013-10-29"
 title: "Mac OSX 10.9- Marvericks使って一週間過ごした感想"
 categories: ["雑記"]
