--- a/posts/2014/02/28.md
+++ b/posts/2014/02/28.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2014/02/i-hold-a-study-meetup-at-my-work/"
+path: "/posts/2014/02/28"
 date: "2014-02-28"
 title: "イベントを主催してきた"
 categories: ["勉強会・大会"]
