--- a/posts/2018/04/23.md
+++ b/posts/2018/04/23.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/04/i-tried-aws-solution-architect-associate-within-2-weeks/"
+path: "/posts/2018/04/23"
 date: "2018-04-23"
 title: "約２週間ほどでAWS SAAを受験した話"
 categories: ["エンジニアリング"]
