--- a/posts/2018/05/04.md
+++ b/posts/2018/05/04.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/05/i-stacked-by-digest-auth-with-passportjs-with-express4/"
+path: "/posts/2018/05/04"
 date: "2018-05-04"
 title: "Passport.jsのDigest認証で詰んだ話（express 4)"
 categories: ["エンジニアリング"]
