--- a/posts/2018/05/07.md
+++ b/posts/2018/05/07.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/05/installing-nodejs-and-express4-with-centos7/"
+path: "/posts/2018/05/07"
 date: "2018-05-07"
 title: "【WEB開発メモ#1】 CentOS7系にnode.jsとExpress 4をインストールする"
 categories: ["エンジニアリング"]
