--- a/posts/2018/05/14.md
+++ b/posts/2018/05/14.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/05/esxi6-5-pxe-boot-and-kickstart-install-on-uefi-boot/"
+path: "/posts/2018/05/14"
 date: "2018-05-14"
 title: "ESXi6.5  PXE boot and Kickstart install on UEFI boot."
 categories: ["エンジニアリング"]
