--- a/posts/2018/05/17.md
+++ b/posts/2018/05/17.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/05/manage-password-safely-by-passportjs-with-digest-strategypassport-js-digest-strategy/"
+path: "/posts/2018/05/17"
 date: "2018-05-17"
 title: "Passport.js digest-strategy で パスワードを安全に管理する"
 categories: ["エンジニアリング"]
