--- a/posts/2018/07/26-1.md
+++ b/posts/2018/07/26-1.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/07/reconfigure-media-serveror-client-certification-setting/"
+path: "/posts/2018/07/26-1"
 date: "2018-07-26"
 title: "Reconfigure media server(or client) certification setting."
 categories: ["エンジニアリング"]
