--- a/posts/2018/07/26.md
+++ b/posts/2018/07/26.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/07/master-server-cert-revoked-on-netbackup-8-1/"
+path: "/posts/2018/07/26"
 date: "2018-07-26"
 title: "Master Server cert revoked on NetBackup 8.1"
 categories: ["エンジニアリング"]
