--- a/posts/2018/08/27.md
+++ b/posts/2018/08/27.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/08/i-tried-checklist-inflaengineer_s_skill_checklist/"
+path: "/posts/2018/08/27"
 date: "2018-08-27"
 title: "「インフラエンジニアのスキルチェックリスト」をやってみた"
 categories: ["雑記"]
