--- a/posts/2018/09/05.md
+++ b/posts/2018/09/05.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/09/how-to-use-docker-php-ext-install-command-on-the-docker_container-of-ansible-modules/"
+path: "/posts/2018/09/05"
 date: "2018-09-05"
 title: "How to use docker-php-ext-install command on the docker_container of ansible modules."
 categories: ["エンジニアリング"]
