--- a/posts/2018/10/27.md
+++ b/posts/2018/10/27.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/10/sier_pg_handson/"
+path: "/posts/2018/10/27"
 date: "2018-10-27"
 title: "SIer５年目が自社新卒３年目までを対象にプログラミング研修の講師をしてきた"
 categories: ["勉強会・大会"]
