--- a/posts/2018/11/11.md
+++ b/posts/2018/11/11.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/11/unique-commands-of-macos/"
+path: "/posts/2018/11/11"
 date: "2018-11-11"
 title: "macOS 固有CLI コマンド"
 categories: ["エンジニアリング"]
