--- a/posts/2018/11/25.md
+++ b/posts/2018/11/25.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/11/getting-start-golang/"
+path: "/posts/2018/11/25"
 date: "2018-11-25"
 title: "Go言語の環境整備と基本文法を学んだ"
 categories: ["入門系記事"]
