--- a/posts/2018/11/28.md
+++ b/posts/2018/11/28.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/11/i-read-a-book-001/"
+path: "/posts/2018/11/28"
 date: "2018-11-28"
 title: "[樺沢紫苑 著] 学びを結果に変える アウトプット大全　を読了した"
 categories: ["読書ログ"]
