--- a/posts/2018/12/31.md
+++ b/posts/2018/12/31.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/12/a-looking-back-on-the-2018/"
+path: "/posts/2018/12/31"
 date: "2018-12-31"
 title: "2018年振り返り"
 categories: ["雑記"]
