--- a/posts/2019/01/05.md
+++ b/posts/2019/01/05.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/01/build-a-list-having-multipule-viewholders-by-once-recyclerview-with-kotlin/"
+path: "/posts/2019/01/05"
 date: "2019-01-05"
 title: "RecyclerView Adapter 一つに対して複数のViewHolderを持つリストを作成する"
 categories: ["エンジニアリング"]
