--- a/posts/2019/01/08.md
+++ b/posts/2019/01/08.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/01/using-button-with-kotlin-android/"
+path: "/posts/2019/01/08"
 date: "2019-01-08"
 title: "【Android App with Kotlin #1】ボタンウィジェットを使う"
 categories: ["エンジニアリング"]
