--- a/posts/2019/01/13.md
+++ b/posts/2019/01/13.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/01/using-imageview-and-imagebutton-with-kotlin-android-part2/"
+path: "/posts/2019/01/13"
 date: "2019-01-13"
 title: "【Android App with Kotlin #2】画像を取り扱う(ImageView/ImageButton)"
 categories: ["エンジニアリング"]
