--- a/posts/2019/01/20.md
+++ b/posts/2019/01/20.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/01/using-listview-with-kotlin-android-part2/"
+path: "/posts/2019/01/20"
 date: "2019-01-20"
 title: "【Android App with Kotlin #4】ListViewを使う(2)"
 categories: ["エンジニアリング"]
