--- a/posts/2019/01/22.md
+++ b/posts/2019/01/22.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/01/i-joined-kotlinlove-7-and-gave-a-presentation/"
+path: "/posts/2019/01/22"
 date: "2019-01-22"
 title: "「集まれ！Kotlin好き！Kotlin愛好会 vol7」に参加し、登壇してきました"
 categories: ["勉強会・大会", "エンジニアリング"]
