--- a/posts/2019/02/06.md
+++ b/posts/2019/02/06.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/02/using-recyclerview-with-kotlin-android/"
+path: "/posts/2019/02/06"
 date: "2019-02-06"
 title: "【Android App with Kotlin #5】RecyclerViewを使う"
 categories: ["エンジニアリング"]
