--- a/posts/2019/03/15.md
+++ b/posts/2019/03/15.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/03/notes-of-my-switching-job/"
+path: "/posts/2019/03/15"
 date: "2019-03-15"
 title: "転職から一ヶ月経ったので近況とか書いていく"
 categories: ["雑記"]
