--- a/posts/2019/09/08.md
+++ b/posts/2019/09/08.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/09/i-attended-isucon9/"
+path: "/posts/2019/09/08"
 date: "2019-09-08"
 title: "【ISUCON9予選】初参加しました"
 categories: ["勉強会・大会"]
