--- a/posts/2019/09/29.md
+++ b/posts/2019/09/29.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/09/ios-framework-build-error/"
+path: "/posts/2019/09/29"
 date: "2019-09-29"
 title: "iOSの自作フレームワーク読み込み後のビルドでエラー"
 categories: ["エンジニアリング"]
