--- a/posts/2020/01/02.md
+++ b/posts/2020/01/02.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2020/01/02/use-bootstrap4-with-gatsbyjs-on-npm-install"
+path: "/posts/2020/01/02"
 date: "2020-01-02"
 title: "GatsbyJSでbootstrap4を使う(npm)"
 categories: ["個人ブログ開発"]
