--- a/posts/2020/01/05.md
+++ b/posts/2020/01/05.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2020/01/05/i-migrated-my-blog-to-netlify-with-gatsbyjs"
+path: "/posts/2020/01/05"
 date: "2020-01-05"
 title: "ブログをGatsbyJS製の静的サイトに移行した"
 categories: ["個人ブログ開発"]
