--- a/posts/2020/06/11.md
+++ b/posts/2020/06/11.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2020/06/11/clas_cast_exception_when_instancing_viewModel_with_fragment-ktx"
+path: "/posts/2020/06/11"
 date: "2020-06-11"
 title: "by viewModels() | ActivityViewModelsでClassCastException "
 categories: ["エンジニアリング"]
