--- a/posts/2020/06/18.md
+++ b/posts/2020/06/18.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2020/06/18/change_floating_action_button_bg_color"
+path: "/posts/2020/06/18"
 date: "2020-06-18"
 title: "FABの背景色と余計な線を消す"
 categories: ["エンジニアリング"]
