--- a/posts/2021/08/22.md
+++ b/posts/2021/08/22.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2021/08/22/gatsby-awesome-pagination"
+path: "/posts/2021/08/22"
 date: "2021-08-22"
 title: "GatsbyJSにページネーションを追加した"
 categories: ["個人ブログ開発"]
