--- a/posts/2021/12/31.md
+++ b/posts/2021/12/31.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2021/12/31/look-back-on-the-year"
+path: "/posts/2021/12/31"
 date: "2021-12-31"
 title: "2021年振り返り"
 categories: ["雑記"]
