--- a/posts/2022/02/14.md
+++ b/posts/2022/02/14.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/2/14/next.js-getStaticProps"
+path: "/posts/2022/2/14"
 date: "2022-02-14"
 title: "getStaticProps の 'props' にハマった時のメモ"
 categories: ["エンジニアリング", "トラブルシューティング"]
