--- a/posts/2022/02/26.md
+++ b/posts/2022/02/26.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/2/26/golang_get_vs_install"
+path: "/posts/2022/2/26"
 date: "2022-02-26"
 title: "Go 1.17 における開発環境構築メモ"
 categories: ["エンジニアリング"]
