--- a/posts/2022/03/08.md
+++ b/posts/2022/03/08.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/3/08/golang_learn_1"
+path: "/posts/2022/3/08"
 date: "2022-03-08"
 title: "Go言語学習(ポインタ、構造体、メソッド）"
 categories: ["エンジニアリング"]
