--- a/posts/2022/04/06.md
+++ b/posts/2022/04/06.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/4/06/rails_new_error"
+path: "/posts/2022/4/06"
 date: "2022-04-06"
 title: "rails new で CipherError" 
 categories: ["エンジニアリング", "トラブルシューティング"]
