--- a/posts/2022/06/02.md
+++ b/posts/2022/06/02.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/6/02/typescript_vuejs_2"
+path: "/posts/2022/6/02"
 date: "2022-06-02"
 title: "TypeScript 環境で Vue.js 2.x を使う時にハマったところを書いていく" 
 categories: ["エンジニアリング", "トラブルシューティング"]
