--- a/posts/2022/07/25.md
+++ b/posts/2022/07/25.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/07/25/isucon12_qualify"
+path: "/posts/2022/07/25"
 date: "2022-07-25"
 title: "ISUCON12 予選に出場した"
 categories: ["勉強会・大会"]
