--- a/posts/2022/10/17.md
+++ b/posts/2022/10/17.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/10/17/vuejs_import_error_on_building"
+path: "/posts/2022/10/17"
 date: "2022-10-17"
 title: "Cannot use namespace 'Vue' as a type. と出てフロントのビルドが失敗した"
 categories: ["エンジニアリング", "トラブルシューティング"]
