--- a/posts/2023/01/07.md
+++ b/posts/2023/01/07.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2023/01/07/go-wav"
+path: "/posts/2023/01/07"
 date: "2023-01-07"
 title: "Portaudio で録音した音声データを WAV 形式で保存する"
 categories: ["エンジニアリング"]
