--- a/posts/2023/01/08.md
+++ b/posts/2023/01/08.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2023/01/08/yarn_vips_sharp_error"
+path: "/posts/2023/01/08"
 date: "2023-01-08"
 title: "yarn 実行時に sharp & vips  でエラー"
 categories: ["トラブルシューティング"]
