--- a/posts/2023/05/13.md
+++ b/posts/2023/05/13.md
@@ -3,7 +3,7 @@ title: "Pinecone の使い方を LangChain と絡めて整理してみた"
 emoji: "🌲"
 topics: ["Pinecone", "vectordb", "langchain"]
 published: false
-path: "/posts/2023/05/13/pinecone_langchain"
+path: "/posts/2023/05/13"
 date: "2023-01-02"
 categories: ["エンジニアリング"]
 tags: ["Pinecone", "LangChain", "vectordb"]
