--- a/posts/2012/07/14.md
+++ b/posts/2012/07/14.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/07/about-super-class-and-sub-class/"
+path: "/posts/2012/07/14"
 date: "2012-07-14"
 title: "クラス(スーパークラス・サブクラス）"
 categories: ["エンジニアリング"]
