--- a/posts/2012/08/03.md
+++ b/posts/2012/08/03.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/08/%e3%81%af%e3%81%98%e3%82%81%e3%81%a6%e3%81%bf%e3%82%8b/"
+path: "/posts/2012/08/03"
 date: "2012-08-03"
 title: "はじめてみる"
 categories: ["雑記"]
