--- a/posts/2012/09/18.md
+++ b/posts/2012/09/18.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/09/i-tried-to-update-to-ios6-by-iphone4-part1/"
+path: "/posts/2012/09/18"
 date: "2012-09-18"
 title: "iPhone4でiOS6にしてみました。"
 categories: ["雑記"]
