--- a/posts/2012/11/28.md
+++ b/posts/2012/11/28.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/11/how-do-i-define-it-by-objective-c/"
+path: "/posts/2012/11/28"
 date: "2012-11-28"
 title: "Objective-C での開発でちょっと詰まったところがあったのでメモ"
 categories: ["エンジニアリング"]
