--- a/posts/2012/12/31.md
+++ b/posts/2012/12/31.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2012/12/lets-start-ios-programming-with-xcode-44/"
+path: "/posts/2012/12/31"
 date: "2012-12-31"
 title: "XCode4.4を使ってiOSプログラミングをはじめよう"
 categories: ["エンジニアリング", "エンジニアリング"]
