--- a/posts/2013/01/07.md
+++ b/posts/2013/01/07.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/01/about-i-stacked-a-setting-internal-dns-server/"
+path: "/posts/2013/01/07"
 date: "2013-01-07"
 title: "内部DNSサーバーの設定に詰んだ話"
 categories: ["エンジニアリング"]
