--- a/posts/2013/02/10.md
+++ b/posts/2013/02/10.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/02/about-mobile-app-contest-2012/"
+path: "/posts/2013/02/10"
 date: "2013-02-10"
 title: "モバイルアプリコンテスト2012"
 categories: ["勉強会・大会", "エンジニアリング"]
