--- a/posts/2013/03/03.md
+++ b/posts/2013/03/03.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/03/i-joined-an-event-trouble_shooters_5/"
+path: "/posts/2013/03/03"
 date: "2013-03-03"
 title: "トラブル☆しゅーたーず　#5~過去からの贈り物~に参加してきた"
 categories: ["勉強会・大会"]
