--- a/posts/2013/03/15.md
+++ b/posts/2013/03/15.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/03/i-got-a-mini-itx/"
+path: "/posts/2013/03/15"
 date: "2013-03-15"
 title: "Mini-ITXゲットだぜ"
 categories: ["雑記"]
