--- a/posts/2013/05/16.md
+++ b/posts/2013/05/16.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/05/note-named-conf-for-lpic-level2/"
+path: "/posts/2013/05/16"
 date: "2013-05-16"
 title: "LPIC Level2用　named.confメモ"
 categories: ["雑記"]
