--- a/posts/2013/06/05.md
+++ b/posts/2013/06/05.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2013/06/build-a-twitter-bot-with-python-twitter/"
+path: "/posts/2013/06/05"
 date: "2013-06-05"
 title: "python-twitterを使ってTwitterBot開発"
 categories: ["入門系記事"]
