--- a/posts/2018/07/23.md
+++ b/posts/2018/07/23.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/07/mariadb-down-due-to-nginx-and-php-fpm/"
+path: "/posts/2018/07/23"
 date: "2018-07-23"
 title: "MariaDB down due to nginx and php-fpm."
 categories: ["エンジニアリング"]
