--- a/posts/2018/10/08.md
+++ b/posts/2018/10/08.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/10/using-mariadb-with-express-and-pug/"
+path: "/posts/2018/10/08"
 date: "2018-10-08"
 title: "express + pugを使ってMariaDB(MySQL)と連携する"
 categories: ["エンジニアリング"]
