--- a/posts/2018/12/03.md
+++ b/posts/2018/12/03.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/12/i-stacked-by-installing-android-sdk-by-cli/"
+path: "/posts/2018/12/03"
 date: "2018-12-03"
 title: "android-sdkをCLIでインストールする際にハマった"
 categories: ["エンジニアリング"]
