--- a/posts/2018/12/28.md
+++ b/posts/2018/12/28.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2018/12/i-joined-year_end_lt-and-gave-a-presentation-at-engineers_lt/"
+path: "/posts/2018/12/28"
 date: "2018-12-28"
 title: "エンジニアの登壇を応援する会_忘年LTで登壇してきた"
 categories: ["勉強会・大会"]
