--- a/posts/2019/01/11.md
+++ b/posts/2019/01/11.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/01/i-joined-casuallt-at-engineers_lt-and-gave-a-presentation/"
+path: "/posts/2019/01/11"
 date: "2019-01-11"
 title: "【engineers_lt】カジュアルLT大会　に参加して登壇してきた　"
 categories: ["勉強会・大会"]
