--- a/posts/2019/01/15.md
+++ b/posts/2019/01/15.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2019/01/using-listview-with-kotlin-android-part1/"
+path: "/posts/2019/01/15"
 date: "2019-01-15"
 title: "【Android App with Kotlin #3】ListViewを使う"
 categories: ["エンジニアリング"]
