--- a/posts/2021/08/21.md
+++ b/posts/2021/08/21.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2021/08/21/isucon11_qualify"
+path: "/posts/2021/08/21"
 date: "2021-08-21"
 title: "ISUCON 11 予選に出場した"
 categories: ["勉強会・大会"]
