--- a/posts/2021/08/24.md
+++ b/posts/2021/08/24.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2021/08/24/gatsby-categories-and-tags"
+path: "/posts/2021/08/24"
 date: "2021-08-24"
 title: "GatsbyJSにカテゴリ一覧、タグ一覧を追加した"
 categories: ["個人ブログ開発"]
