--- a/posts/2021/08/28.md
+++ b/posts/2021/08/28.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2021/08/28/using-react-share-for-my-blog"
+path: "/posts/2021/08/28"
 date: "2021-08-28"
 title: "React の react-share を使ってSNSシェアアイコンを設置した "
 categories: ["個人ブログ開発"]
