--- a/posts/2022/02/12.md
+++ b/posts/2022/02/12.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/2/12/next.js-develop-environment"
+path: "/posts/2022/2/12"
 date: "2022-02-12"
 title: "Next.js 開発環境構築"
 categories: ["エンジニアリング"]
