--- a/posts/2022/02/19.md
+++ b/posts/2022/02/19.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/2/19/nodegit"
+path: "/posts/2022/2/19"
 date: "2022-02-19"
 title: "nodegit を使って git リポジトリを操作してみた"
 categories: ["エンジニアリング"]
