--- a/posts/2022/03/05.md
+++ b/posts/2022/03/05.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/3/05/What_is_gradual_typing"
+path: "/posts/2022/3/05"
 date: "2022-03-05"
 title: "漸進的型付けとは"
 categories: ["エンジニアリング"]
