--- a/posts/2022/03/12.md
+++ b/posts/2022/03/12.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/3/12/golang_learn_2"
+path: "/posts/2022/3/12"
 date: "2022-03-12"
 title: "Go言語学習(net/http における HTTP サーバー構築)"
 categories: ["エンジニアリング"]
