--- a/posts/2022/11/12.md
+++ b/posts/2022/11/12.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2022/11/12/first_step_terraform"
+path: "/posts/2022/11/12"
 date: "2022-11-12"
 title: "Terraform の Quick start tutorial をじっくりやってみた"
 categories: ["エンジニアリング"]
