--- a/posts/2023/01/02.md
+++ b/posts/2023/01/02.md
@@ -1,5 +1,5 @@
 ---
-path: "/posts/2023/01/02/portaudio_go"
+path: "/posts/2023/01/02"
 date: "2023-01-02"
 title: "Portaudio を Go 言語で触ってみた"
 categories: ["エンジニアリング"]
