--- a/posts/2024/09/19.md
+++ b/posts/2024/09/19.md
@@ -1,7 +1,7 @@
 ---
 path: "/posts/2024/09/19"
 date: "2024-09-19"
-title: "新規事業立ち上げに携わって1年経ったエンジニアの考える成長する働き方"
+title: "新規事業携わって1年経ったエンジニアの考える、「エンジニアの成長方法」とは"
 categories: ["圧倒的成長"]
 tags: ["エンジニアリング", "エンジニアリングマネージャー", "マネジメント"]
 excerpt: "2024年9月で、今の会社で始まった新規事業案件に携わって1年が経過しました。正確には5月頃から水面下で動き始めてたりというのはあったのですが、正式な所属として今のフラッグシッププロダクトの開発から外れたのが9月でした。"
@@ -127,8 +127,6 @@ UI/UX については、本を読んだり、YouTube を見たり、デザイナ
 みたいな感じです。これに関しては「摩擦はあるもの」と割り切ったパワープレイで心を強く持っていこうと考えています。
 
 上司や周りのメンバーと **「あの話し合いってどうだったと思う？」** と振り返って **「いや、あれはキリンさんが守りすぎだよ」** とか逆に **「あれでいいよ。もっとあんな感じでいこう」** と<span class="marker-important">フィードバックをもらうことで、自分の考えを整理する</span>ようにしています。
-
-
 
 ## 1年前と比べてどう変わったか
 
