--- a/posts/2024/09/19.md
+++ b/posts/2024/09/19.md
@@ -1,7 +1,7 @@
 ---
 path: "/posts/2024/09/19"
 date: "2024-09-19"
-title: "新規事業携わって1年経ったエンジニアの考える、「エンジニアの成長方法」とは"
+title: "新規事業に1年携わって実感した 「エンジニアの成長方法」とは"
 categories: ["圧倒的成長"]
 tags: ["エンジニアリング", "エンジニアリングマネージャー", "マネジメント"]
 excerpt: "2024年9月で、今の会社で始まった新規事業案件に携わって1年が経過しました。正確には5月頃から水面下で動き始めてたりというのはあったのですが、正式な所属として今のフラッグシッププロダクトの開発から外れたのが9月でした。"
