--- a/posts/2024/09/19.md
+++ b/posts/2024/09/19.md
@@ -99,9 +99,20 @@ UI/UX については、本を読んだり、YouTube を見たり、デザイナ
 　
 ### テックリードとしての働き方を意識し始めた
 
-フラグシッププロダクトに携わっていた頃よりも小さいチームなので「テックリード」という概念が当てはまるかはわからないですが、設計やコードレビュー、DevOpsの整備やパフォーマンスチューニングなど、チーム全体の底上げになるような事は何かを考えて仕事をしていたと思います。
+フラグシッププロダクトに携わっていた頃よりも小さいチームなので「テックリード」という概念が当てはまるかはわからないですが、以下はかなり優先度高くやっています。
+
+- 設計
+- コードレビュー
+- DevOpsの整備
+- パフォーマンスチューニング
+
+などなど、チーム全体の底上げになるような事は何かを考えて仕事をしていたと思います。
 
 もちろん、Biz側と話し合って作っていくと決めた機能を早く届けるのが最優先になってしまいますが、いかに空いた時間を作って全体底上げの時間を作るかを意識していました。
+
+日々の仕事で、駆け出しの頃は避けていたけど、今は避けてられない状況が成長に繋がったと思います。逆に言えば、駆け出しの頃でも積極的にこれらに挑戦すると、成長できるんじゃないかと思います。
+
+もちろんできる事が少ない時は何からしたら良いかわからず手が出せないというジレンマもあると思いますが、少しずつでもいいし、自分で環境を構築してトライして安全に失敗するのもアリだと思います。
 
 
 ## 挫折したことと、そこから意識したこと
