--- a/posts/2024/09/19.md
+++ b/posts/2024/09/19.md
@@ -108,7 +108,7 @@ UI/UX については、本を読んだり、YouTube を見たり、デザイナ
 
 などなど、チーム全体の底上げになるような事は何かを考えて仕事をしていたと思います。
 
-もちろん、Biz側と話し合って作っていくと決めた機能を早く届けるのが最優先になってしまいますが、いかに空いた時間を作って全体底上げの時間を作るかを意識していました。
+Biz側と話し合って作っていくと決めた機能を早く届けるのが最優先になってしまいますが、いかに空いた時間を作って全体底上げの時間を作るかを意識していました。
 
 日々の仕事で、駆け出しの頃は避けていたけど、今は避けてられない状況が成長に繋がったと思います。逆に言えば、駆け出しの頃でも積極的にこれらに挑戦すると、成長できるんじゃないかと思います。
 
