--- a/posts/2025/05/04.md
+++ b/posts/2025/05/04.md
@@ -23,7 +23,7 @@ type: "post"
 
 Bリーグの試合を観ていると「笛が」とか「なんだあの判定」とか思った事は誰しもあると思います。
 
-私も例に漏れずその1人でしたが、自分の贔屓チーム（越谷アルファーズ）に対して不利な判定にのみ注目して不満を募らせるより、良い判定、難しいけどしっかりした判定、<span class="marker-important">贔屓チームだけじゃなくて相手チームにも不利な判定になっていないのか</span>という、なるべく公平な観点で審判の動きをみてみたいと思うようになりました。
+私も例に漏れずその1人でしたが、自分の贔屓チーム（越谷アルファーズ）に対して不利な判定にのみ注目して不満を募らせるより、良い判定、難しいけどしっかりした判定、<span class="marker-important">贔屓チームだけじゃなくて相手チームにも不利な判定の笛は吹かれているのだろうか</span>という、なるべく公平な観点で審判の動きをみてみたいと思うようになりました。
 
 そして、明らかにおかしいものについては言語化して正しい批判をしたいし、良いものはどんどんプラスの声をかけていきたい、というのがモチベーションです
 
