--- a/posts/2025/07/30.md
+++ b/posts/2025/07/30.md
@@ -2,8 +2,7 @@
 path: /posts/2025/07/30
 date: 2025-07-30
 title: 審判員としてU12クラブに所属することになった
-categories:
-  - バスケットボール
+categories: ["雑記"]
 tags:
   - 趣味
   - バスケットボール
