--- a/posts/2025/07/30.md
+++ b/posts/2025/07/30.md
@@ -1,15 +1,11 @@
 ---
-path: /posts/2025/07/30
-date: 2025-07-30
-title: 審判員としてU12クラブに所属することになった
+path: "/posts/2025/07/30"
+date: "2025-07-30"
+title: "審判員としてU12クラブに所属することになった"
 categories: ["雑記"]
-tags:
-  - 趣味
-  - バスケットボール
-  - Bリーグ
-  - 審判
-excerpt: 
-type: post
+tags: ["趣味","バスケットボール", "Bリーグ", "審判"]
+excerpt: ""
+type: "post"
 ---
 https://x.com/Kill_In_Sun/status/1949092016627028304
 
