--- a/posts/2025/10/04.md
+++ b/posts/2025/10/04.md
@@ -34,8 +34,7 @@ type: "post"
 5:49 ナイスOFジャッジ
 
 
-4:26 スガちゃんドンマイファウル
-ら手が当たってしまった
+4:26 スガちゃんドンマイファウル。手が当たってしまった
 
 4:06 セク ドライブ でシュートいくが、ニックにイリーガルハンズされる。なぜファウルとられない。
 
@@ -43,25 +42,25 @@ type: "post"
 
 3:00 セク ドライブ OFになりかけた？
 
-1:38 池ちゃん シリンダー
+1:38 池ちゃん シリンダー違反でファウル。
 
-58 リバウンド サップさんファウルドローン
+0:58 リバウンド サップさんファウルドローン
 
-1秒 セク セーフシューター違反
+0:01 セク セーフシューター違反 取られてない
 
 ## 2Q
+
 9:06 コティ ファウル ナイスジャッジ
 
 8:59 いいお ホールディング ナイスジャッジ
 
-8:36
-ニックケイ、尻突き出し過ぎでは？ イリーガルシリンダーやろ
+8:36 ニックケイ、尻突き出し過ぎでは？ イリーガルシリンダーやろ
 
 8:04 ニックケイ エンドワン IUoH ナイスジャッジ
 
 7:11 岡田 OF ナイスジャッジ
 
-7:02 マツシュン  OF なりかけたがあれは相手のフェイク
+7:02 マツシュン  OF なりかけたがあれは相手のフェイク。フェイクのシグナル出してもよかったと思う。
 
 6:43 飯尾3P 、 サップさんオフボールでファウル 島根ポジ
 
@@ -90,9 +89,9 @@ type: "post"
 
 5:44 関係ないけど鎌ちゃん打てたやろ！
 
-4:32 コティトラベリング？
+4:32 コティトラベリング。片手でボールをキャッチし、同じ足でケンケン。なぜ吹かれない・・・
 
-4:15 セク ドライブで相手突き飛ばすが ノーチャージエリア
+4:15 セク ドライブで相手突き飛ばすが チャージング取られず。ニックは正面かつ両足ついているように見えたが・・・
 
 4:00 鎌ちゃん リバウンド争い 疑惑の判定
 
