--- a/posts/2025/10/04.md
+++ b/posts/2025/10/04.md
@@ -138,6 +138,12 @@ type: "post"
 
 初心者レフェリー的にはアウトオブバウンズと24秒バイオレーションが同時に発生したり、ショットの成功と同時にオフボールでのファウルがあった際の処置など勉強になるなーというシーンが多かったです。
 
+### 最後に
+
+池田と岡田のやり合い、トラッシュトーク何言ってるか気になる。ああいう場面ってどんなこと言うんだろう。
+
+面白すぎるからコート内音声拾えるようにして欲しい
+
 以上
 
 
