--- a/posts/2025/10/04.md
+++ b/posts/2025/10/04.md
@@ -46,7 +46,7 @@ type: "post"
 
 0:58 リバウンド サップさんファウルドローン
 
-0:01 セク セーフシューター違反 取られたが、着地に足かかってないぞ。疑惑の判定。
+0:01 セク セーフシューター違反 取られたが、着地に足かかってない。ただしショットした手が当たった判定そのものは間違いなさそう。コティがこけるほどではない・・・。
 
 ## 2Q
 
