--- a/posts/2025/10/04.md
+++ b/posts/2025/10/04.md
@@ -46,7 +46,7 @@ type: "post"
 
 0:58 リバウンド サップさんファウルドローン
 
-0:01 セク セーフシューター違反 取られたが、着地に足かかってない。ただしショットした手が当たった判定そのものは間違いなさそう。コティがこけるほどではない・・・。
+0:01 セク プロテクトシューター違反 取られたが、着地に足かかってない。ただしショットした手が当たった判定そのものは間違いなさそう。コティがこけるほどではない・・・。
 
 ## 2Q
 
@@ -68,7 +68,7 @@ type: "post"
 
 3:00 岡田ファウル 妥当
 
-1:07 池田 セーフシューター違反だが吹かれてない
+1:07 池田プロテクトシューター違反だが吹かれてない
 
 1:06 24秒とアウトオブバウンズ 同時のシチュエーション
 
@@ -126,9 +126,21 @@ type: "post"
 2:31 コティ3P うつが、外れる。 マツシュンが着地ブロックしてしまい、ファウルしたという判定だが、よくみるとマツシュン、着地に脚絡んでない。 現場で見た時はかかってるように見えた
 
 1:50 マツシュン、<span class="marker-important">3P入るがAoS前と判定されカウントされず。疑惑の判定。 </span>人によってはAoS中と判断する人の方が多そう。 
-等速だと岡田に触られて大勢崩した後にAoS入ったように見える。まじで微妙な差。** 私はこれを試合で吹く勇気はまだない。**
+等速だと岡田に触られて大勢崩した後にAoS入ったように見える。まじで微妙な差。**私はこれを試合で吹く勇気はまだない。**
 
-1:16 キャプテンの速攻をヨコチに止められるが、アンスポにはならず。個人的にはアンスポだろ！と思って見返したけど確かにアンスポにはならなさそうだった。ごめん。 
+### 10/05 追記
+
+コマ送りで問題のシーンを見返しました。
+
+松シュンがボールをギャザーする直前、ドリブルしていたタイミングで岡田選手がファウルで止めにいっており、審判の目視がかかってました。
+人間の反応速度的に、そこから手を上げて笛を吹こうとするとどうしてもラグがあります。
+
+今回、笛を吹くタイミングと同時にAoS(シュートモーション)に入ったため、ノーカンと判定したのではないでしょうか。
+
+アルファメイトには申し訳ないですが、これはレフェリーとして正しい判定だなと感じてしまいました。もし異なる意見がある場合は、そっと教えていただけると嬉しいです。
+
+
+1:16 キャプテンの速攻をヨコチに止められるが、アンスポにはならず。個人的にはアンスポだろ！と思って見返したけど確かにアンスポにはならなさそうだった。ごめん。
 
 
 ---
