--- a/posts/2025/07/30.md
+++ b/posts/2025/07/30.md
@@ -2,7 +2,7 @@
 path: "/posts/2025/07/30"
 date: "2025-07-30"
 title: "審判員としてU12クラブに所属することになった"
-categories: ["雑記"]
+categories: ["バスケ審判"]
 tags: ["趣味","バスケットボール", "Bリーグ", "審判"]
 excerpt: ""
 type: "post"
