--- a/posts/2025/08/13.md
+++ b/posts/2025/08/13.md
@@ -2,7 +2,7 @@
 path: "/posts/2025/08/13"
 date: "2025-08-13"
 title: "審判グッズはレイクタウンで全部揃う"
-categories: ["雑記"]
+categories: ["バスケ審判"]
 tags: ["趣味","バスケットボール", "Bリーグ", "審判"]
 excerpt: "バスケットボールのレフェリーをする上で必要なものはいくつかありますが、そのいずれもがレイクタウンで揃えることができます。なんでもありますね、レイクタウン。"
 type: "post"
