--- a/posts/2025/07/13.md
+++ b/posts/2025/07/13.md
@@ -2,7 +2,7 @@
 path: "/posts/2025/07/13"
 date: "2025-07-13"
 title: "E級審判ライセンスを取って2ヶ月後、意図せず審判デビューした"
-categories: ["雑記"]
+categories: ["バスケ審判"]
 tags: ["趣味", "バスケットボール", "Bリーグ"]
 excerpt: ""
 type: "post"
