--- a/posts/2025/10/05.md
+++ b/posts/2025/10/05.md
@@ -2,7 +2,7 @@
 path: "/posts/2025/10/05"
 date: "2025-10-05"
 title: "第1節 越谷vs島根 Game2 ジャッジ気になったところ"
-categories: ["雑記"]
+categories: ["バスケ審判"]
 tags: ["趣味","バスケットボール", "Bリーグ", "審判"]
 excerpt: "第1節 越谷vs島根 Game2 ジャッジ気になったところ"
 type: "post"
