--- a/posts/2025/10/20.md
+++ b/posts/2025/10/20.md
@@ -3,7 +3,7 @@ path: "/posts/2025/10/20"
 date: "2025-10-20"
 title: "第4節 越谷vs京都 Game2 ジャッジ気になったところ"
 categories: ["バスケ審判"]
-tags: ["趣味","バスケットボール", "Bリーグ", "審判"]
+tags: ["趣味","バスケットボール", "Bリーグ", "審判", "審判気になったところ"]
 excerpt: "第4節 越谷vs京都 Game2 ジャッジ気になったところ"
 type: "post"
 ---
