--- a/posts/2025/05/04.md
+++ b/posts/2025/05/04.md
@@ -3,7 +3,7 @@ path: "/posts/2025/05/04"
 date: "2025-05-04"
 title: "JBA の E級審判ライセンスを取得してみた"
 categories: ["バスケ審判"]
-tags: ["趣味", "バスケットボール", "Bリーグ"]
+tags: ["趣味", "バスケットボール", "Bリーグ", "審判"]
 excerpt: ""
 type: "post"
 ---
