カテゴリとタグの振り分け (#14)
* category

* tags

--- a/posts/2025/05/04.md
+++ b/posts/2025/05/04.md
@@ -2,8 +2,8 @@
 path: "/posts/2025/05/04"
 date: "2025-05-04"
 title: "JBA の E級審判ライセンスを取得してみた"
-categories: ["雑記"]
-tags: ["趣味", "バスケットボール", "Bリーグ"]
+categories: ["バスケ審判"]
+tags: ["趣味", "バスケットボール", "Bリーグ", "審判"]
 excerpt: ""
 type: "post"
 ---
