--- a/posts/2025/08/27.md
+++ b/posts/2025/08/27.md
@@ -2,8 +2,8 @@
 path: "/posts/2025/08/27"
 date: "2025-08-27"
 title: "審判活動振り返り(1ヶ月目)"
-categories: ["雑記"]
-tags: ["趣味","バスケットボール", "Bリーグ", "審判"]
+categories: ["バスケ審判"]
+tags: ["趣味","バスケットボール", "Bリーグ", "審判", "審判活動振り返り"]
 excerpt: "厳密には7月下旬にクラブの練習に加わるようになり、1ヶ月以上過ぎているのだけど、まぁ良い区切りなので簡単に振り返っていきます。"
 type: "post"
 ---
