--- a/posts/2025/09/27.md
+++ b/posts/2025/09/27.md
@@ -2,8 +2,8 @@
 path: "/posts/2025/09/27"
 date: "2025-09-27"
 title: "審判活動振り返り(2ヶ月目)"
-categories: ["雑記"]
-tags: ["趣味","バスケットボール", "Bリーグ", "審判"]
+categories: ["バスケ審判"]
+tags: ["趣味","バスケットボール", "Bリーグ", "審判", "審判活動振り返り"]
 excerpt: "恥ずかしいレベルのミスと吹けない笛"
 type: "post"
 ---
