--- a/posts/2025/10/27.md
+++ b/posts/2025/10/27.md
@@ -48,6 +48,16 @@ type: "post"
 
 ただ、こういった学びが得られるのも積極的に吹いて、フィードバックをもらうことで「これは不要だったんだ」という気づきがあったのであまり消極的にならず、次からは同じミスをくりかえさないようにしたいです。
 
+## その他
+
+今月からBリーグの試合を観て、気になったところをメモしていくようにしました。
+
+もともと自分の判定技術向上のためにやりはじめたのですが、あまりにも「ええ〜？」というジャッジにはブースターも納得いかないままだと気持ち悪いという声もあり、そういった方に「あ、なるほど、だからああいうジャッジになったのか」という腑に落ちたりするものが提供できているようで嬉しいです。
+
+まだ素人審判なので上級審判の方々からすると「何いってんねん」とか、「偉そうに」みたいな反応も当然あると思いますが、私個人としては「批判するだけじゃなくて、良い面も探っていこう」の観点でBリーグの盛り上がりに貢献できればと思います。
+
+気になる試合や、プレー・ジャッジがあった場合は、 Twitterなどでリプライ、DMもらえればと思います。
+
 ## 終わりに
 
 11月末にD級ライセンスの取得試験があります。状況によっては抽選による参加になるため確定したわけじゃないですが、上位のライセンスがないと吹けない試合もあるので、機会があればどんどんチャレンジしていくつもりです。
